# yank

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: binaries.yml  ci.yml  docker.yml
crates/yank-client/: Cargo.toml  build.rs
crates/yank-client/src/: main.rs  paths.rs  sync.rs  windows_tray.rs
crates/yank-core/: Cargo.toml
crates/yank-core/i18n/: en.json  zh.json
crates/yank-core/src/: i18n.rs  lib.rs
crates/yank-server/: Cargo.toml
crates/yank-server/src/: main.rs
docs/: ditto-client-capability-matrix.md  ditto-server-mapping.md
