[workspace]
members = [
    "crates/yank-core",
    "crates/yank-server",
    "crates/yank-client",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
axum = "0.8.7"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
directories = "6.0.0"
hex = "0.4.3"
makepad-widgets = "1.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
