[package]
name = "yank-client"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
chrono.workspace = true
directories.workspace = true
global-hotkey.workspace = true
makepad-widgets.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
yank-core = { path = "../yank-core" }

[target.'cfg(target_os = "linux")'.dependencies]
ksni.workspace = true

[[bin]]
name = "yank-client"
path = "src/main.rs"
test = false
